--- a/Colorum/Colorum/Colorum.csproj
+++ b/Colorum/Colorum/Colorum.csproj
@@ -6,6 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
+    <PackageReference Include="Xamarin.Forms.CarouselView" Version="2.3.0-pre2" />
+    <PackageReference Include="Xamarin.Forms.Pages" Version="2.5.0.121934" />
+    <PackageReference Include="Xamarin.Forms.Pages.Azure" Version="2.5.0.121934" />
+    <PackageReference Include="Xamarin.Forms.Theme.Base" Version="1.0.0.43-pre1" />
+    <PackageReference Include="Xamarin.Forms.Theme.Dark" Version="1.0.0.43-pre1" />
+    <PackageReference Include="Xamarin.Forms.Theme.Light" Version="1.0.0.43-pre1" />
   </ItemGroup>
 
   <ItemGroup>
