--- a/Colorum/Colorum.Android/Properties/AndroidManifest.xml
+++ b/Colorum/Colorum.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Colorum">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="Colorum.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.mwmsoft.colorum" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="24" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="Colorum.Android" android:icon="@drawable/icon"></application>
 </manifest>
